# light-field-image-format

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  test.ppm
doc/: Makefile  xdlaba02-Ztratova-komprese-plenoptickych-fotografii-20-literatura-bibliography.bib
extra/: hevc_compress.cc  x265bench.cc  xvc_decompress.cc
include/: bitmap.h  bitstream.h  codec.h  compress.h  constmath.h  dct.h  decompress.h  endian.h  huffman.h  huffman_decoder.h  huffman_encoder.h  image_jpeg.h  jpeg.h  jpeg2_encoder.h  jpeg2d.h  jpeg2d_decoder.h  jpeg2d_encoder.h  jpeg3d.h  jpeg4d.h  jpeg_decoder.h  jpeg_encoder.h  lfif.h  lfif_decoder.h  lfif_encoder.h  ppm.h  priority_list.h  zigzag.h
liblfif/: CMakeLists.txt  Makefile
libppm/: CMakeLists.txt  (+1 more)
tools/: CMakeLists.txt  Makefile
tools/include/: compress.h  decompress.h  file_mask.h  lfifbench.h  lfifppm.h  lfiftest.h  plenoppm.h  tiler.h  zigzag.h
tools/src/: cabac_test.cc  center_compress.cc  center_decompress.cc  centerpredict_compress.cc  compress.cc  decompress.cc  dynamic_test.cc  file_mask.cc  hevc_compress.cc  hevc_decompress.cc  lf_psnr.cc  lf_stats.cc  lfif16_compress.cc  lfif16_decompress.cc  lfif2d_compress.cc  lfif2d_decompress.cc  lfif3d_compress.cc  lfif3d_decompress.cc  lfif4d_compress.cc  lfif4d_decompress.cc  lfif5d_compress.cc  lfif5d_decompress.cc  lfif_decompress.cc  lfifbench.cc  lfifppm.cc  lfiftest.cc  mozbench.cc  moztest.cc  openjpegbench.cc  plenoppm.cc  ppm_test.cc  predict_test.cc  tiler.cc  x265bench.cc  x265test.cc  xvc_compress.cc  xvc_decompress.cc  xvcbench.cc  zigzag.cc
(+124 files in other folders)
